--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/HungryBird/blog-management-system#readme",
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.4",
     "moment": "^2.24.0",
     "mysql": "^2.17.1"
